<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16dp">

    <TextView
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/LinkWater"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24dp"
        android:text="@string/please_enter_the_four_digit_num"/>

    <com.google.android.material.textfield.TextInputEditText
        android:textSize="@dimen/text_size_24sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/edt_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_verification_code"
        android:paddingStart="@dimen/dimen_48dp"
        android:paddingEnd="@dimen/dimen_48dp"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tv_verify"
        android:background="@drawable/login_btn_background"
        android:padding="@dimen/dimen_14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/submit"
        android:textAllCaps="true"/>
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/LinkWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/have_not_received_your"/>
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/LinkWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_2dp"
        android:text="@string/it_can_take_up_to"/>
    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/text_size_22sp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24dp"
        android:text="@string/why_verify_your_phone_number"/>
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/LinkWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_2dp"
        android:text="@string/it_shows_that_you"/>

</LinearLayout>
