<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/dimen_8dp"
    tools:context=".activity.LincesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Licenses"
        android:textSize="@dimen/dimen_32dp"
        android:textColor="@color/design_dark_default_color_background"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VK"
        android:textSize="@dimen/dimen_32dp"
        android:textColor="@color/design_dark_default_color_background"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_20dp"/>

      <TextView
          android:layout_marginTop="@dimen/dimen_20dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Licenses_sentence1"
          android:background="@color/grey"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3DSView"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>


        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Licenses_sentence2"
            android:background="@color/grey"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Butter Knife"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@color/grey"
            android:text="@string/Licenses_sentence3" />

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gson"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Licenses_sentence4"
            android:background="@color/grey"/>


        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Otto"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Linceses_sentence5"
            android:background="@color/grey"/>


        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PayPal"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Linces_sentence6"
            android:background="@color/grey"/>



        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ViewPagerIndicator"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linces_sentence7"
            android:background="@color/grey"/>



        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OkHttp"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linces_sentence8"
            android:background="@color/grey"/>



        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Okio"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linces_sentence9"
            android:background="@color/grey"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retrofit2"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linces_sentence10"
            android:background="@color/grey"/>


        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Merge Adapter"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linces_sentence11"
            android:background="@color/grey"/>


        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SackOfViewsAdapter"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linces_sentence12"
            android:background="@color/grey"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facebook"
            android:textSize="@dimen/dimen_32dp"
            android:textColor="@color/design_dark_default_color_background"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linces_sentence13"
            android:background="@color/grey"/>

        







    </LinearLayout>

</ScrollView>