<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="@dimen/dimen_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_2dp"
            android:src="@drawable/ic_mobile"/>
        <TextView
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/just_one_thing"/>
        <TextView
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_verify_your_number"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_12dp">
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinner_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_hint="@string/region"
            app:ms_multiline="false"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:hint="@string/phone_number"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_verify"
            android:background="@drawable/login_btn_background"
            android:padding="@dimen/dimen_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/verify"
            android:textAllCaps="true"/>
    </LinearLayout>
</LinearLayout>
