<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/grey"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/car"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <TextView
                android:textSize="@dimen/text_size_28sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/string_going_somewhere"
                android:paddingStart="@dimen/dimen_24dp"
                android:paddingEnd="@dimen/dimen_24dp" />
            <TextView
                android:textSize="@dimen/text_size_20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="@dimen/dimen_4dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/string_share_travel_cost" />
            <Button
                android:textColor="@color/white"
                android:id="@+id/btn_offer_ride"
                android:background="@drawable/background_primary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@string/label_offer_ride"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp" />
            <Button
                android:textColor="@color/colorPrimary"
                android:id="@+id/btn_find_ride"
                android:background="@drawable/background_white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_24dp"
                android:text="@string/label_find_ride"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>