<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/text_size_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_12dp"
        android:text="@string/please_enter_the_email"/>
    <View
        android:background="@color/LinkWater"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_1dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_12dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:hint="@string/email"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/login_btn_background"
            android:padding="@dimen/dimen_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/submit"
            android:textAllCaps="true"/>
    </LinearLayout>
</LinearLayout>
