<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/car"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:textSize="@dimen/text_size_28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:paddingStart="@dimen/dimen_24dp"
                android:paddingEnd="@dimen/dimen_24dp"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:textSize="@dimen/text_size_22sp"
        android:textColor="@color/primaryTextColor"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/string_carpooling"
        android:paddingStart="@dimen/dimen_24dp"
        android:paddingEnd="@dimen/dimen_24dp"/>
    <Button
        android:textColor="@color/white"
        android:id="@+id/btn_sign_up"
        android:background="@drawable/background_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/label_sign_up"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"/>
    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/btn_log_in"
        android:background="@drawable/background_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/label_log_in"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"/>
</LinearLayout>
